--- a/src/contact.html
+++ b/src/contact.html
@@ -141,10 +141,16 @@
                     <div class="contact-form bg-white" style="padding: 30px;">
                        
                             <div class="control-group">
-                                <textarea class="form-control py-3 px-4" rows="15" id="message" placeholder="Google maps"
-                                    required="required"
-                                    data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block text-danger"></p>
+                                <iframe
+                                width="600"
+                                height="450"
+                                style="border:0"
+                                loading="lazy"
+                                allowfullscreen
+                                referrerpolicy="no-referrer-when-downgrade"
+                                src="https://www.google.com/maps/embed/v1/place?key=API_KEY
+                                  &q=Space+Needle,Seattle+WA">
+                              </iframe>
                             </div>
 
                     </div>
