--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                     <div class="d-inline-flex align-items-center">
                         <!-- <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
                         <p class="text-body px-3">|</p> -->
-                        <p><i class="fa fa-phone-alt mr-2"></i>+4 0752 393 716</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+4 0744 638 738</p>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-right">
@@ -96,7 +96,7 @@
                                 <a href="destination.html" class="dropdown-item">Hora de la Prislop</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacts</a>
                     </div>
                 </div>
             </nav>
