--- a/src/contact.html
+++ b/src/contact.html
@@ -59,6 +59,7 @@
         </div>
     </div>
     <!-- Topbar End -->
+
     <!-- Navbar Start -->
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
@@ -72,26 +73,34 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="package.html" class="nav-item nav-link">Tour Packages</a>
+                        <a href="about.html" class="nav-item nav-link">Imagini</a>
+                        <a href="service.html" class="nav-item nav-link">Servicii & Preturi</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sporturi de IARNA</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
-                                <a href="destination.html" class="dropdown-item">Destination</a>
-                                <a href="guide.html" class="dropdown-item">Travel Guides</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="blog.html" class="dropdown-item">Partia Carlibaba</a>
+                                <a href="single.html" class="dropdown-item">Partia Prislop</a>
+                                <a href="destination.html" class="dropdown-item">Partiile Vatra Dornei</a>
+                                <a href="guide.html" class="dropdown-item">Partia Borsa</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">De vizitat</a>
+                            <div class="dropdown-menu border-0 rounded-0 m-0">
+                                <a href="blog.html" class="dropdown-item">Trasee in Muntii ... </a>
+                                <a href="single.html" class="dropdown-item">Manastirea Prislop</a>
+                                <a href="destination.html" class="dropdown-item">Festivalul Pastravului</a>
+                                <a href="destination.html" class="dropdown-item">Hora de la Prislop</a>
+                            </div>
+                        </div>
+                        <a href="contact.html" class="nav-item nav-link active">Contacts</a>
                     </div>
                 </div>
             </nav>
         </div>
     </div>
     <!-- Navbar End -->
+
     <!-- Header Start -->
     <div class="container-fluid page-header">
         <div class="container">
@@ -108,7 +117,7 @@
     <!-- Header End -->
     <!-- Contact Start -->
     <div class="container-fluid py-5" style="padding-top: 1rem !important ">
-        <div class="container py-5"  style="padding-top: 1rem !important ">
+        <div class="container py-5" style="padding-top: 1rem !important ">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact-form bg-white" style="padding: 30px;">
