--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
 
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -166,7 +166,7 @@
 
 
     <!-- Booking Start -->
-    <div class="container-fluid booking mt-5 pb-5">
+    <!--<div class="container-fluid booking mt-5 pb-5">
         <div class="container pb-5">
             <div class="bg-light shadow" style="padding: 30px;">
                 <div class="row align-items-center" style="min-height: 60px;">
@@ -204,7 +204,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Booking End -->
 
 
@@ -280,29 +280,29 @@
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
-                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h6>
+                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Servicii</h6>
                 <h1>Tours & Travel Services</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-route mx-auto mb-4"></i>
-                        <h5 class="mb-2">Travel Guide</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <i class="fa fa-2x fa-bed mx-auto mb-4"></i>
+                        <h5 class="mb-2">Ideal pentru grupuri</h5>
+                        <p class="m-0">Capacitate de 4 persoane cu posibilitatea de a adauga inca 2 paturi suplimentare</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
-                        <h5 class="mb-2">Ticket Booking</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <i class="fa fa-2x fa-kitchen-set mx-auto mb-4"></i>
+                        <h5 class="mb-2">Apartament complet utilat</h5>
+                        <p class="m-0">Apartament dotat cu bucatarie, Wi-Fi, TV, parcare, spatiu de depozitare suplimentar dar si cu patur si masuta pentru copii</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
-                        <h5 class="mb-2">Hotel Booking</h5>
-                        <p class="m-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem est amet labore</p>
+                        <i class="fa fa-2x fa-person-skiing mx-auto mb-4"></i>
+                        <h5 class="mb-2">Sporturi de iarna</h5>
+                        <p class="m-0">Casa Radu este la 1,5km de partia Carlibaba dar si in apropierea partiei Prislop, Borsa sau Vatra Dornet</p>
                     </div>
                 </div>
             </div>
